--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -6,25 +6,26 @@
     <meta charset="utf-8">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
-  <body class="d-flex justify-content-center">
-    <div class="col-6 big-top-space border rounded px-3 py-4">
-        
-        <img src="/img/logo.png" class="mx-auto d-block">
+  <body>
+    <div class="row">
+        <div class="col-12 col-sm-6 border rounded px-3 py-4 mx-auto">
+            <img src="/img/logo.png" class="mx-auto d-block">
 
-        <form name="login" method="POST" action="/admin/processLogin">
-        	
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="text" name="email" placeholder="Email" id="email" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" name="password" placeholder="Password" id="password" class="form-control">
-            </div>
-            <div class="row d-flex justify-content-center">
-                <input type="submit" value="login" class="btn btn-info">
-            </div>
-        </form>
+            <form name="login" method="POST" action="/admin/processLogin" class="row">
+            	
+                <div class="form-group col-10 mx-auto">
+                    <label for="email">Email</label>
+                    <input type="text" name="email" placeholder="Email" id="email" class="form-control">
+                </div>
+                <div class="form-group col-10 mx-auto">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" placeholder="Password" id="password" class="form-control">
+                </div>
+                <div class="d-flex justify-content-center mt-4 col-12">
+                    <input type="submit" value="login" class="btn btn-info">
+                </div>
+            </form>
+        </div>
     </div>
   </body>
 </html>
