--- a/views/admin/users/userslist.ejs
+++ b/views/admin/users/userslist.ejs
@@ -8,36 +8,40 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   </head>
   <body>
-    <h1>users</h1>
-    <table class="table table-inverse">
-    	<thead>
-    		<tr>
-    			<th>ID</th>
-    			<th>Alias</th>
-    			<th>Email</th>
-    			<th>Points</th>
-    			<th>Options</th>
-    		</tr>
-    	</thead>
-    	<tbody>
-    		<% for(var i=0; i < users.length; i++) { %>
-    		<tr>
-    			<td><%= users[i]._id %></td>
-    			<td><%= users[i].alias %></td>
-    			<td><%= users[i].email %></td>
-    			<td><%= users[i].points %></td>
-    			<% var editLink = "../../admin/users/"+users[i]._id %>
-    			<td>
-    				<a href="<%= editLink %>" role="button" style="color: black">
-    					<i class="fas fa-edit fa-lg"></i>
-    				</a>
-    				<a href="" role="button" style="color: black">
-    					<i class="fas fa-ban fa-lg"></i>
-    				</a>
-    			</td>
-    		</tr>
-    		<% } %>
-    	</tbody>
-    </table>
+    <div class="row">
+        <div class="col-12 border rounded px-5 py-4">
+            <h1 class="text-center pb-4">users</h1>
+            <table class="table table-hover">
+            	<thead>
+            		<tr>
+            			<th>ID</th>
+            			<th>Alias</th>
+            			<th>Email</th>
+            			<th>Points</th>
+            			<th></th>
+            		</tr>
+            	</thead>
+            	<tbody>
+            		<% for(var i=0; i < users.length; i++) { %>
+            		<tr>
+            			<td><%= users[i]._id %></td>
+            			<td><%= users[i].alias %></td>
+            			<td><%= users[i].email %></td>
+            			<td><%= users[i].points %></td>
+            			<% var editLink = "../../admin/users/"+users[i]._id %>
+            			<td>
+            				<a href="<%= editLink %>" role="button" style="color: black">
+            					<i class="fas fa-edit fa-lg"></i>
+            				</a>
+            				<a href="" role="button" style="color: black">
+            					<i class="fas fa-eye fa-lg"></i>
+            				</a>
+            			</td>
+            		</tr>
+            		<% } %>
+            	</tbody>
+            </table>
+        </div>
+    </div>
   </body>
 </html>
