--- a/views/admin/users/userslist.ejs
+++ b/views/admin/users/userslist.ejs
@@ -13,6 +13,25 @@
             <% include ../../partials/adminNavbar %>
         </div>
         <div class="col-12 border rounded px-5 py-4">
+            <div class="row">
+                <div class="col-12">
+                <% if (action == "newUser") { %>
+                    <div id="newUserAlert" class="alert alert-success alert-dismissible fade show" role="alert">
+                      <strong>New user created!</strong>
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                <% } else if (action == "deleteUser"){ %>
+                    <div id="deleteUserAlert" class="alert alert-warning alert-dismissible fade show" role="alert">
+                      <strong>User successfully deleted!</strong>
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                <% } %>
+                </div>
+            </div>
             <div class="row justify-content-between align-items-center">
                 <h1 class="col-12 col-sm-4 pb-4">users</h1>
                 <div class="col-12 col-sm-4">
@@ -38,14 +57,18 @@
             			<td><%= users[i].alias %></td>
             			<td><%= users[i].email %></td>
             			<td><%= users[i].points %></td>
-            			<% var editLink = "../../admin/users/"+users[i]._id %>
-            			<td>
+            			<td class="mr-2" style="text-align: right;">
+            			    <% var editLink = "../../admin/users/"+users[i]._id %>
             				<a href="<%= editLink %>" role="button" style="color: black">
             					<i class="fas fa-edit fa-lg"></i>
             				</a>
             				<a href="" role="button" style="color: black">
             					<i class="fas fa-eye fa-lg"></i>
             				</a>
+                            <% var deleteLink = "/admin/users/"+users[i]._id+"?action=delete" %>
+                            <a href="<%= deleteLink %>" role="button" style="color: black">
+                                <i class="fas fa-trash fa-lg mr-2"></i>
+                            </a>
             			</td>
             		</tr>
             		<% } %>
@@ -81,7 +104,7 @@
             </div>
             <div class="form-group mx-auto row">
                 <label for="role" class="col-12 col-sm-3 offset-sm-1">Role</label>
-                <select id="role" class="form-control col-12 col-sm-7" required>
+                <select id="role" name="role" class="form-control col-12 col-sm-7" required>
                     <option selected>user</option>
                     <option>admin</option>
                 </select>
