--- a/views/partials/adminNavbar.ejs
+++ b/views/partials/adminNavbar.ejs
@@ -2,8 +2,8 @@
   <a class="navbar-brand" href="#">RUNNIMAL</a>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="nav navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/users">Users</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Features</a>
