--- a/views/admin/users/view.ejs
+++ b/views/admin/users/view.ejs
@@ -13,7 +13,21 @@
         </div>
         <div class="col-12 border rounded px-3 py-4">
 
-            <% if (alert == "newPet") { %>
+            <% if (alert == "userEdited"){ %>
+                <div id="userEditedAlert" class="alert alert-success alert-dismissible fade show" role="alert">
+                  <strong>User changes saved successfully!</strong>
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+            <% } else if (alert == "passwordReseted") { %>
+                <div id="userEditedAlert" class="alert alert-success alert-dismissible fade show" role="alert">
+                  <strong>Password reseted successfully!</strong>
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+            <% } else if (alert == "newPet") { %>
                 <div id="newPetAlert" class="alert alert-success alert-dismissible fade show" role="alert">
                   <strong>New pet created!</strong>
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -28,14 +42,14 @@
                   </button>
                 </div>
             <% } else if (alert == "ownerAdded"){ %>
-                <div id="deletePetAlert" class="alert alert-success alert-dismissible fade show" role="alert">
+                <div id="ownerAddedAlert" class="alert alert-success alert-dismissible fade show" role="alert">
                   <strong>New owner added!</strong>
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
             <% } else if (alert == "ownerDeleted"){ %>
-                <div id="deletePetAlert" class="alert alert-warning alert-dismissible fade show" role="alert">
+                <div id="ownerDeletedAlert" class="alert alert-warning alert-dismissible fade show" role="alert">
                   <strong>Owner successfully deleted!</strong>
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -60,7 +74,7 @@
                         <label for="alias" class="col-12 col-sm-1">Alias</label>
                         <input type="text" name="alias" value="<%= user.alias %>" id="alias" class="form-control col-12 col-sm-4">
                         <label for="role" class="col-12 col-sm-1 offset-sm-1">Role</label>
-                        <select id="size" class="form-control col-12 col-sm-4">
+                        <select id="role" class="form-control col-12 col-sm-4" name="role">
                         <% var roles = ["user", "admin"]; %>
                         <% for(var i = 0; i < roles.length; i++){
                             if(user.role == roles[i]){ %>
@@ -73,9 +87,10 @@
                     </div>
                     <div class="form-group mx-auto row">
                         <label for="points" class="col-12 col-sm-1">Points</label>
-                        <input type="points" name="points" value="<%= user.points %>" id="points" class="form-control col-12 col-sm-4" readonly>
+                        <input type="points" value="<%= user.points %>" id="points" class="form-control col-12 col-sm-4" readonly>
                         <div class="col-12 col-sm-3 offset-sm-1">
-                            <a class="btn btn-warning" href="#" role="button">Reset password</a>
+                            <% var resetPasswordLink = "/admin/users/" + user._id + "?action=resetPassword"%>
+                            <a class="btn btn-warning" href="<%= resetPasswordLink %>" role="button">Reset password</a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-2 offset-sm-1 p-0">
