permet afegir, eliminar i editar entrenaments

--- a/views/admin/users/view.ejs
+++ b/views/admin/users/view.ejs
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-2 offset-sm-1 p-0">
-                        <input type="submit" value="edit" class="btn btn-info">         
+                        <input type="submit" value="save" class="btn btn-info">         
                     </div>
                 </form>
             </div>
