--- a/views/partials/adminNavbar.ejs
+++ b/views/partials/adminNavbar.ejs
@@ -6,7 +6,7 @@
         <a class="nav-link" href="/admin/users">Users</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="/admin/trainnings">Trainnings</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Pricing</a>
