--- a/views/partials/adminNavbar.ejs
+++ b/views/partials/adminNavbar.ejs
@@ -9,10 +9,7 @@
         <a class="nav-link" href="/admin/trainnings">Trainnings</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link" href="/admin/points">Points</a>
       </li>
     </ul>
   </div>
