permet afegir steps i canvia la nomenclatura dels idiomes

--- a/views/admin/trainnings/list.ejs
+++ b/views/admin/trainnings/list.ejs
@@ -101,9 +101,9 @@
             <div class="form-group mx-auto row">
                 <label for="language" class="col-12 col-sm-3 offset-sm-1">Language</label>
                 <select id="language" name="language" class="form-control col-12 col-sm-4" required>
-                    <option selected>en</option>
-                    <option>es</option>
-                    <option>ca</option>
+                    <option selected>EN</option>
+                    <option>ES</option>
+                    <option>CA</option>
                 </select>
             </div>
             <div class="row justify-content-end">
