--- a/views/partials/adminNavbar.ejs
+++ b/views/partials/adminNavbar.ejs
@@ -14,7 +14,7 @@
     </ul>
   </div>
   <ul class="nav navbar-nav navbar-right">
-    <li><a href="#" class="nav-link">Log out<i class="fas fa-sign-out-alt fa-lg px-2" style="color: indianred"></i></a></li>
+    <li><a href="/admin/logout" class="nav-link">Log out<i class="fas fa-sign-out-alt fa-lg px-2" style="color: indianred"></i></a></li>
   </ul>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
