--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -10,20 +10,34 @@
     <div class="row">
         <div class="col-12 col-sm-6 border rounded px-3 py-4 mx-auto">
             <img src="/img/logo.png" class="mx-auto d-block">
-
-            <form name="login" method="POST" action="/admin/processLogin" class="row">
+            <form name="login" method="POST" action="/admin" class="row">
             	
                 <div class="form-group col-10 mx-auto">
                     <label for="email">Email</label>
-                    <input type="text" name="email" placeholder="Email" id="email" class="form-control">
+                    <input type="email" name="email" placeholder="Email" id="email" class="form-control" required>
                 </div>
                 <div class="form-group col-10 mx-auto">
                     <label for="password">Password</label>
-                    <input type="password" name="password" placeholder="Password" id="password" class="form-control">
+                    <input type="password" name="password" placeholder="Password" id="password" class="form-control" required>
                 </div>
                 <div class="d-flex justify-content-center mt-4 col-12">
                     <input type="submit" value="login" class="btn btn-info">
                 </div>
+                <% if (error == "userDontExists") { %>
+                    <div id="userDontExists" class="alert alert-danger alert-dismissible fade show col-10 mx-auto mt-3" role="alert">
+                      There isn't user with this email or password!
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                <% } else if (error == "noPermissions") { %>
+                    <div id="userDontExists" class="alert alert-danger alert-dismissible fade show col-10 mx-auto mt-3" role="alert">
+                        You don't have authorization to access here!
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                <% } %>
             </form>
         </div>
     </div>
