--- a/views/admin/users/userslist.ejs
+++ b/views/admin/users/userslist.ejs
@@ -46,7 +46,7 @@
             			<th>ID</th>
             			<th>Alias</th>
             			<th>Email</th>
-            			<th>Points</th>
+            			<th>Role</th>
             			<th></th>
             		</tr>
             	</thead>
@@ -56,14 +56,11 @@
             			<td><%= users[i]._id %></td>
             			<td><%= users[i].alias %></td>
             			<td><%= users[i].email %></td>
-            			<td><%= users[i].points %></td>
+            			<td><%= users[i].role %></td>
             			<td class="mr-2" style="text-align: right;">
             			    <% var editLink = "../../admin/users/"+users[i]._id %>
             				<a href="<%= editLink %>" role="button" style="color: black">
             					<i class="fas fa-edit fa-lg"></i>
-            				</a>
-            				<a href="" role="button" style="color: black">
-            					<i class="fas fa-eye fa-lg"></i>
             				</a>
                             <% var deleteLink = "/admin/users/"+users[i]._id+"?action=delete" %>
                             <a href="<%= deleteLink %>" role="button" style="color: black">
